RESOLVED FIXED20388
<video> elements on Windows never becomes visible when a page is restored from the cache.
https://bugs.webkit.org/show_bug.cgi?id=20388
Summary <video> elements on Windows never becomes visible when a page is restored fro...
Eric Carlson
Reported 2008-08-14 17:44:49 PDT
<video> elements on Windows do not becomes visible when a page is restored from the cache, possibly as a is a side effect of the fix for rdar://6112219. This happens because the call sequence when restoring from the cache is such that m_qtMovie is NULL the first time the renderer calls MediaPlayer::setRect, but it caches the rect so MediaPlayerPrivate::setRect is never called when the renderer sets the size again after the movie is allocated.
Attachments
proposed patch (1.94 KB, patch)
2008-08-14 17:47 PDT, Eric Carlson
adele: review+
Eric Carlson
Comment 1 2008-08-14 17:47:27 PDT
Created attachment 22804 [details] proposed patch
Adele Peterson
Comment 2 2008-08-14 17:53:49 PDT
Committed revision 35772.
Note You need to log in before you can comment on or make changes to this bug.