WebCore/platform/graphics/MediaPlayer.cpp
@@ -141,10 +141,8 @@ float MediaPlayer::volume() const
 
 void MediaPlayer::setVolume(float volume)
 {
-    if (volume != m_volume) {
-        m_volume = volume;
-        m_private->setVolume(volume);   
-    }
+    m_volume = volume;
+    m_private->setVolume(volume);   
 }
 
 float MediaPlayer::rate() const
@@ -154,8 +152,6 @@ float MediaPlayer::rate() const
 
 void MediaPlayer::setRate(float rate)
 {
-    if (rate == m_rate) 
-        return;
     m_rate = rate;
     m_private->setRate(rate);   
 }
@@ -197,8 +193,6 @@ unsigned MediaPlayer::totalBytes()
 
 void MediaPlayer::setRect(const IntRect& r) 
 { 
-    if (m_rect == r)
-        return;
     m_rect = r;
     m_private->setRect(r);
 }
@@ -210,8 +204,6 @@ bool MediaPlayer::visible() const
 
 void MediaPlayer::setVisible(bool b)
 {
-    if (m_visible == b)
-        return;
     m_visible = b;
     m_private->setVisible(b);
 }
